udev 150
========
Bugfixes.

udev 149
========
Fix for a possible endless loop in the new input_id program.

udev 148
========
Bugfixes.

The option "ignore_device" does no longer exist. There is no way to
ignore an event, as libudev events can not be suppressed by rules.
It only prevented RUN keys from being executed, which results in an
inconsistent behavior in current setups.

BUS=, SYSFS{}=, ID= are long deprecated and should be SUBSYSTEM(S)=,
ATTR(S){}=, KERNEL(S)=. It will cause a warning once for every rule
file from now on.

The support for the deprecated IDE devices has been removed from the
default set of rules. Distros who still care about non-libata drivers
need to add the rules to the compat rules file.

The ID_CLASS property on input devices has been replaced by the more accurate
set of flags ID_INPUT_{KEYBOARD,KEY,MOUSE,TOUCHPAD,TABLET,JOYSTICK}. These are
determined by the new "input_id" prober now. Some devices, such as touchpads,
can have several classes. So if you previously had custom udev rules which e. g.
checked for ENV{ID_CLASS}=="kbd", you need to replace this with
ENV{ID_INPUT_KEYBOARD}=="?*".

udev 147
========
Bugfixes.

To support DEVPATH strings larger than the maximum file name length, the
private udev database format has changed. If some software still reads the
private files in /dev/.udev/, which it shouldn't, now it's time to fix it.
Please do not port anything to the new format again, everything in /dev/.udev
is and always was private to udev, and may and will change any time without
prior notice.

Multiple devices claiming the same names in /dev are limited to symlinks
only now. Mixing identical symlink names and node names is not supported.
This reduces the amount of data in the database significantly.

NAME="%k" causes a warning now. It's is and always was completely superfluous.
It will break kernel supplied DEVNAMEs and therefore it needs to be removed
from all rules.
